@@ -1,5 +1,9 @@
 2002-08-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* cygwin/GNUmakefile: [CYGWIN] Install bug-lilypond-cygwin.
+
+	* cygwin/bug-lilypond-cygwin.sh: New file.
+
 	* stepmake/stepmake/help2man-rules.make: Better way of showing
 	help2man command.
 
